# my-ai-assistant

./: .ai_config.yml  .aiignore  .gitattributes  .gitignore  AGENTS.md  Architectural_Plan_Version_4.0.md  MANIFEST.in  Makefile  NOTICE  PROJECT_BLUEPRINT.md  PROJECT_ROADMAP.md  PROJECT_STATE.md  PROJECT_STATE1.md  README.md  REFACTOR_PLAN.md  TECHNICAL_DEBT.md  ai  architectural_review_report.md  final_review_command.sh  hello.md  path_to_attached_file  persona_config.yml  persona_manifest.yml  prompt.md  pyproject.toml
.ai/personas/custom/: greeter.persona.md
.ai/plugins/: local_trading_plugin.py
.ai_pmo/: PROGRAM_STATE.md  cli_prompts.md
.ai_pmo/projects/: P-001_JULES_INTEGRATION.md  P-002_RAG_IMPLEMENTATION.md  P-004_UNIFY_API_CLIENTS
.ai_pmo/projects/completed/: P-003_PROMPT_GOVERNANCE.md
.ai_sessions/: session_1addc126-dd76-4481-8750-e3edb21c231c.json  session_27d2dc16-799f-48f1-8f43-44c2657671c4.json  session_3175792a-d62d-4cf4-89a6-8d53e5c30f50.json  session_42aa4062-35a1-429a-a19e-059fe52bb5c2.json  session_43e4c15d-c815-4bf7-aa1d-babd56ca07c7.json  session_48b1e056-0cb0-4523-a7fc-cad7cffbaa9a.json  session_49b1a191-6156-49e3-bd90-a1a467c2547f.json  session_4d616bbb-e91c-416e-86c1-e0a0a48156c8.json  session_52c5f94f-4641-42c4-bafc-b4c2a9751878.json  session_54d43418-6901-42f7-a014-c810fb37751c.json  session_63aa9f1e-b319-434f-abe8-0ce62b6f8d71.json  session_7224bf49-4536-44d3-aaa8-7921a024618f.json  session_8b2216fa-f8d7-4a65-8949-6b06863b4cb8.json  session_abf7b360-7d2a-49b0-b659-55f70014fbb9.json  session_ba5ddbff-f5f7-4aa9-a0c4-a1af2fa67743.json  session_bfd05410-077c-417f-a2bf-91efb1b113ab.json  session_cc439c4e-bb36-46c3-93fe-915c530bdfb6.json  session_cf4468dd-9e46-4b35-a167-026a07c6bf07.json  session_ddca247a-bf2a-48f0-84f0-56196a4c46ce.json  session_e6f16776-1886-49d1-ac5b-f87b08721de0.json  session_ee779e20-7b34-4399-921d-55ac400ee3a0.json  session_fc1faed1-f706-4d49-bd12-15abf304317d.json  session_fc2daaed-bb46-4e0c-ba17-45cae5e17037.json
.github/workflows/: ci-cd-pipeline.yml  main.yml  smart-indexing.yml
ai_assistant/: cli.py  config.py  context_optimizer.py  context_plugin.py  default_config.yml  persona_loader.py  planner.py  prompt_builder.py  tools.py  trading_context.py
ai_assistant/personas/core/: sa-1.persona.md
ai_assistant/personas/specialized/: ada-1.persona.md  adr-1.persona.md  csa-1.persona.md  dca-1.persona.md  jia-1.persona.md  jta-1.persona.md  sva-1.persona.md
ai_pkg/: manifest.json  summary.md
docs/: HALTS_SUBSYSTEM.md  advance_usage.md  contributing.md  getting_started.md  index.md  installation.md  live_system_checks.md  multi_stage_refactoring.md  orchestrating_projects.md  personas.md  plugins.md  project_configuration.md  prompting_guide.md  rag_workflow.md  safety_model.md  system_contracts.yml
docs/templates/: prompting_guide.md.template
my_custom_sessions/: session_5f24bb5a-b800-4729-b9e1-603bc1f701f3.json
plugins/: trading_plugin.py
prompt_library/: README.md
prompt_library/01-basic-analysis/: 01-analyze-code.sh  README.md
prompt_library/02-safe-refactoring/: 01-refactor-file.sh  README.md
prompt_library/03-project-specific-tasks/: 01-use-local-expert.sh  README.md
prompt_library/04-advanced-orchestration/: 01-document-all-services.sh  README.md
prompt_library/audits/: 01_audit_persona_architecture.sh  02_review_application_architecture.sh  03_comprehensive_architectural_review.instance.md  03_comprehensive_architectural_review.instance_shell.md  04_validate_persona_examples.sh  validate_article_premise.sh
prompt_library/governance/: 01_enforce_and_add_descriptions.sh  02_create_project_blueprint.sh
prompt_library/refactors/: 01_refactor_kernel_logic.sh
prompt_library_local/: 01_audit_persona_architecture.sh  02_review_application_architecture.sh
scripts/: generate_docs.py  generate_manifest.py  generate_schemas.py  indexer.py  pel_utils.py  persona_validator.py  validate_personas.py
src/: dummy_module.py  test_refactor.py  trading_service.py
src/ai_assistant/: _security_guards.py  cli.py  colors.py  config.py  context_optimizer.py  context_plugin.py  data_models.py  default_config.yml  executor.py  governance.py  indexer.py  kernel.py  librarian_client.py  llm_client_factory.py  logging_config.py  persona_loader.py  persona_validator.py  plan_validator.py  planner.py  prompt_analyzer.py  prompt_builder.py  query_expander.py  reranker.py  response_handler.py  session_manager.py  tools.py
src/ai_assistant/internal_data/: governance.yml  persona_config.yml  persona_manifest.yml  prompt_analysis_rules.yml
src/ai_assistant/plugins/: rag_plugin.py  trading_plugin.py
src/ai_assistant/utils/: colors.py  context_optimizer.py  git_utils.py  result_presenter.py  signature.py  symbol_extractor.py
src/plugins/: trading_plugin.py
test-chat/: manifest.json
test-coder/: manifest.json  summary.md
test_output_package/: manifest.json
tests/: test_cli_file_handling.py  test_config_loading.py  test_contract_validation.py  test_file_operations.py  test_persona_validation.py  test_read_file_tool3.py  test_security_guards.py
tests/schemas/: output_package_manifest_schema.json
(+87 files in other folders)
