# pyproject.toml

[project]
name = "my-ai-assistant"
version = "1.2.3"
description = "AI Assistant for Software Development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
      "aiohttp",
      "requests",
      "pyyaml",
      "pydantic>=2.0",
      "structlog",
      "instructor",
      "openai",    
      ]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ai = "ai_assistant.cli:main"
ai-execute = "ai_assistant.executor:main"

[project.entry-points."ai_assistant.context_plugins"]
"domains-programming" = "ai_assistant.plugins.domains.programming.context:ProgrammingContextPlugin"
"domains-finance" = "ai_assistant.plugins.domains.finance.context:FinanceContextPlugin"
"domains-writing" = "ai_assistant.plugins.domains.writing.context:WritingContextPlugin"
"domains-trading" = "ai_assistant.plugins.domains.trading.context:TradingContextPlugin"

[project.optional-dependencies]
test = [
    "unittest-xml-reporting",
    "pytest",
    "jsonschema",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_assistant*"]

[tool.setuptools.package-data]
"ai_assistant" = [
    "default_config.yml",
    "personas/**/*.persona.md",
    "internal_data/governance.yml",
    "internal_data/persona_config.yml",
    "internal_data/schemas/**/*.json"
]