# pyproject.toml

[project]
name = "my-ai-assistant"
version = "1.2.9"
description = "A Persona-Driven AI Assistant for Development and Knowledge Work"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
      "aiohttp==3.12.7",
      "pyyaml==6.0.2",
      "pydantic>=2.8.0",
      "structlog==25.4 ",
      "instructor==1.10.0",
      "openai==1.101.0",    
      "google-generativeai>=0.8", 
      "tiktoken==0.11.0",
      "python-dotenv==1.1.1",
      "protobuf<6.0",
      "click==8.0.4",
      ]

[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ai = "ai_assistant.cli:main"
ai-execute = "ai_assistant.executor:main"
ai-index = "ai_assistant.indexer:main"

[project.entry-points."ai_assistant.context_plugins"]
"domains-programming" = "ai_assistant.plugins.domains.programming.context:ProgrammingContextPlugin"
"domains-finance" = "ai_assistant.plugins.domains.finance.context:FinanceContextPlugin"
"domains-writing" = "ai_assistant.plugins.domains.writing.context:WritingContextPlugin"
"domains-trading" = "ai_assistant.plugins.domains.trading.context:TradingContextPlugin"

[project.optional-dependencies]
test = [
    "unittest-xml-reporting",
    "pytest",
    "jsonschema",
     "my-ai-assistant[client]",
]

rag-base = [
    "chromadb==1.0.20",
    "sentence-transformers==5.1.0", # Reranking is client-side
    ]

# For the production/indexing environment
indexing = [
    "my-ai-assistant[rag-base]",
    "sentence-transformers==5.1.0",
    "torch==2.8.0 ",
]
# For lightweight developer environments that only query the remote index
client = [
    "my-ai-assistant[rag-base]",
    "oci",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_assistant*"]

[tool.setuptools.package-data]
"ai_assistant" = [
    "default_config.yml",
    "personas/**/*.persona.md",
    "internal_data/governance.yml",
    "internal_data/persona_config.yml",
    "internal_data/schemas/**/*.json"
]